CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(RastaMan)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

FIND_PACKAGE(Boost 1.49 REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

FILE(GLOB RastaMan_SOURCE src/*.hpp src/*.cpp)

SET(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIR}
  ${EIGEN3_INCLUDE_DIR}
  ${GLFW_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
)

ADD_EXECUTABLE(RastaMan ${RastaMan_SOURCE})
TARGET_LINK_LIBRARIES(RastaMan
  GLEW::GLEW
  ${GLFW_LIBRARY}
  ${OPENGL_LIBRARIES}
)
